habilitePourExamenInitial
